# multi-agent-a2a

agent_1/: .env  agent.py  agent_executor.py  main.py  pyproject.toml
host_agent_adk/: pyproject.toml
host_agent_adk/host/: agent.py
