[project]
name = "host-agent-adk"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "a2a-sdk>=0.2.11",
    "adk>=0.0.5",
    "arize-otel>=0.9.0",
    "dotenv>=0.9.9",
    "google-adk>=1.5.0",
    "nest-asyncio>=1.6.0",
    "openinference-instrumentation-google-adk>=0.1.1",
]
